objects/vlocity_cmt__AdSpaceSpecification__c.object
<CustomObject>
    <description>Defines individual or grouped sections on web pages (for digital ads) or time segments (for television and radio ads) in which a commercial may be delivered.</description>
    <fields>
        <fullName>vlocity_cmt__AdServerAdSpaceIdentifier__c</fullName>
        <description>For each Ad Space specification, the Ad Server will have a unique name/id which will be captured in this field. Ex : AdUnitId in GAM.</description>
        <externalId>true</externalId>
        <label>AdServer AdSpace Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdServerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This captures the Ad Server which serves this Ad Space Specification.</description>
        <label>Ad Server</label>
        <referenceTo>vlocity_cmt__AdServer__c</referenceTo>
        <relationshipLabel>Ad Space Specifications</relationshipLabel>
        <relationshipName>AdSpaceSpecifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AdSpaceType__c</fullName>
        <label>Ad Space Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Leaderboard</fullName>
                </value>
                <value>
                    <fullName>Skyscraper</fullName>
                </value>
                <value>
                    <fullName>Graphic Image</fullName>
                </value>
                <value>
                    <fullName>Pre-Roll</fullName>
                </value>
                <value>
                    <fullName>Mid-Roll</fullName>
                </value>
                <value>
                    <fullName>Post-Roll</fullName>
                </value>
                <value>
                    <fullName>Full banner WF DFP</fullName>
                </value>
                <value>
                    <fullName>1 Page Standard</fullName>
                </value>
                <value>
                    <fullName>2 Page Spread</fullName>
                </value>
                <value>
                    <fullName>2/3 Page Vertical</fullName>
                </value>
                <value>
                    <fullName>1/2 Page Horizontal</fullName>
                </value>
                <value>
                    <fullName>Billboard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__AudienceSizeRating__c</fullName>
        <description>Captures the estimated potential reach for the Ad Space specification.</description>
        <label>Audience Size Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__CoreId__c</fullName>
        <description>Displays the ID of the core object created when migrating custom data.</description>
        <label>Core Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndDateTime__c</fullName>
        <description>Captures the end date and time for a scheduled program specification.</description>
        <label>End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndTime__c</fullName>
        <description>Captures the End Time for the Ad Space specification.</description>
        <label>End Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__EndWeekDay__c</fullName>
        <description>Captures the day of the week on which the Ad Space specification ends.</description>
        <label>End Week Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__IsLiveBroadcast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether a Broadcast is a Live or Recorded Telecast.</description>
        <label>Is Live Broadcast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MediaContentTitleId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the Media Content Title record.</description>
        <label>Media Content Title</label>
        <referenceTo>vlocity_cmt__MediaContentTitle__c</referenceTo>
        <relationshipLabel>Ad Space Specifications</relationshipLabel>
        <relationshipName>AdSpaceSpecifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__MediaPropertyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This captures the website, tv program or periodical, etc, where the Ad Space Specification exists.</description>
        <label>Media Property</label>
        <referenceTo>vlocity_cmt__MediaProperty__c</referenceTo>
        <relationshipLabel>Ad Space Specifications</relationshipLabel>
        <relationshipName>AdSpaceSpecifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Product2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Refers to the Product record created for one or more Ad Spaces. The product is added to the Placement and is used to calculate the total cost of the Placement.</description>
        <label>Ad Space Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Ad Space Specifications</relationshipLabel>
        <relationshipName>AdSpaceSpecifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProgramRunType__c</fullName>
        <description>Captures the program run schedule type. For example, Repeat, Regular, Premiere, and so on.</description>
        <label>Program Run Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
                <value>
                    <fullName>Premiere</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PublisherDayPart__c</fullName>
        <description>Captures the day time type for the Ad Space Specification. For example, Prime Time and Non-Prime Time.</description>
        <label>Publisher Day Part</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prime Time</fullName>
                </value>
                <value>
                    <fullName>Non Prime Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartDateTime__c</fullName>
        <description>Captures the start date and time for a scheduled program specification.</description>
        <label>Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartTime__c</fullName>
        <description>Captures the Start Time for the Ad Space specification.</description>
        <label>Start Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__StartWeekDay__c</fullName>
        <description>Captures the day of the week on which the Ad Space specification begins.</description>
        <label>Start Week Day</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sunday</fullName>
                </value>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Ad Space Specification</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__IsActive__c</columns>
        <columns>vlocity_cmt__AdServerId__c</columns>
        <columns>vlocity_cmt__AdSpaceType__c</columns>
        <columns>vlocity_cmt__MediaPropertyId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Space Specifications</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__AdSpace</fullName>
        <active>true</active>
        <description>The Ad Space record type is used to create a single Ad Space Specification record.</description>
        <label>Ad Space</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__AdSpaceGroup</fullName>
        <active>true</active>
        <description>The Ad Space Group record type is used to create the Ad Space Specification Group record.</description>
        <label>Ad Space Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ScheduledProgram</fullName>
        <active>true</active>
        <description>Represents Ad Space specifications for Linear TV and Radio ads during scheduled programs.</description>
        <label>Scheduled Program</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>